--- a/index.html
+++ b/index.html
@@ -211,18 +211,12 @@ img:hover{
 </a>
 </li>
 
-<li class="nav-item">
-<a class="nav-link learn-more-btn btn-extra-header" style="background-color: white !important;" href="https://poocoin.app/tokens/#">
-<p class="nav-link-menu">Poocoin</p>
-</a>
-</li>
 </ul>
 <ul class="navbar-nav">
 <li class="nav-item">
 <a class="nav-link learn-more-btn btn-extra-header" style="background-color: #ffd73fe0 !important;" href="https://t.me/SuperMiniFloki" target="_blank">Telegram</a>
 </li>
-<li class="nav-item">
-<a class="nav-link learn-more-btn btn-header ignore" target="_blank" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=#">PancakeSwap</a>
+<li class="nav-item"
 </li>
 </ul>
 </div>
