--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <head>
 <meta charset="UTF-8">
 
-<title>SuperMiniFloki - Simply Hold SuperMiniFloki and Earn BNB automatically every minute.</title>
+<title>ElonFloki - Simply Hold ElonFloki and Earn BNB automatically every minute.</title>
 <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
 
 
@@ -709,19 +709,6 @@ img:hover{
 	</g>
 </g>
 </svg><span class="sr-only"></span>
-
-<p style="font-family: Quicksand;" class="mt-4 mb-2 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
-SuperMiniFloki is a BNB Reflection token. Simply Hold SuperMiniFloki and Earn BNB automatically every minute. 
-</p>
-<div class="mt-4 sm:mt-8 sm:flex sm:justify-center lg:justify-start">
-
-<div class="mt-3 sm:mt-0 sm:ml-3">
-<a href="#" target="_new" rel="noopener noreferrer" style="position: relative;" class="w-full action-button flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-white hover:bg-indigo-700 md:py-4 md:text-lg md:px-10">
-Buy Super Mini Floki<span style="position: relative; top: 1px; left: 9px;"><svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M9.3 0.304138L7.9 1.70326L12.2 6.00061L0 6.00061V7.99937L12.2 7.99937L7.9 12.2967L9.3 13.6959L16 7L9.3 0.304138Z" fill="white" /></svg></span>
-<div class="colors"></div>
-</a>
-</div>
-
 </div>
 </div>
 </main>
@@ -736,9 +723,9 @@ Buy Super Mini Floki<span style="position: relative; top: 1px; left: 9px;"><svg 
 <div class="header">
 <div class="container header-container">
 <div class="col-md-6 header-title-section">
-<p class="header-subtitle">Super Mini Floki</p>
-<h1 class="header-title">Dream <span>Big with</span> SuperMiniFloki</h1>
-<p class="header-title-text">SuperMiniFloki has plans to do donations to organizations and have competitions that will reward holders thousands of dollars. The team
+<p class="header-subtitle">Elon Floki</p>
+<h1 class="header-title">Dream <span>Big with</span> ElonFloki</h1>
+<p class="header-title-text">ElonFloki has plans to do donations to organizations and have competitions that will reward holders thousands of dollars. The team
 Is looking to create a positive community filled with people who just want to have a good time earning passive income, the good old days of
 DeFi. We have some exciting plans that we want to do with this project that we won’t announce yet </p>
 <div class="learn-more-btn-section">
@@ -758,11 +745,11 @@ DeFi. We have some exciting plans that we want to do with this project that we w
 <div class="container about-container">
 <div class="col-md-6 about-title-section">
 
-<h2 class="about-title">Meet SuperMiniFloki and Join the family.
+<h2 class="about-title">Meet ElonFloki and Join the family.
 </h2>
-<p class="about-text">The Fierce Floki has joined the battle. Born with a sword in his hand and a mission to accomplish, SuperMiniFloki is not your Average Floki. He once fought off 8 Ninjas in his sleep with only a pillow as his weapon, but SuperMiniFloki or “Kai” doesnt just kill or Fight off enemies, he’s also really generous to his followers. SuperMiniFloki sends rewards to holders in BNB just for being a part of the amazing community.</p>
+<p class="about-text">The Fierce Floki has joined the battle. Born with a sword in his hand and a mission to accomplish, ElonFloki is not your Average Floki. He once fought off 8 Ninjas in his sleep with only a pillow as his weapon, but ElonFloki or “Kai” doesnt just kill or Fight off enemies, he’s also really generous to his followers. ElonFloki sends rewards to holders in BNB just for being a part of the amazing community.</p>
 <div class="learn-more-btn-section mt-5">
-<a class="nav-link learn-more-btn" href="https://t.me/SuperMiniFloki">Telegram</a>
+<a class="nav-link learn-more-btn" href="https://t.me/elonflokichat">Telegram</a>
 </div>
 </div>
 <div class="col-md-6 col-sm-12">
@@ -1029,8 +1016,8 @@ Investors security and safety is one of our top priorities!</p>
 <div class="testimonials-section" style="background-color: #f2f7fa">
 <div class="container testimonials-container">
 <div class="col-md-12 testimonials-title-section">
-<p class="testimonials-subtitle">Get $SMF in 4 Steps</p>
-<h2 class="testimonials-title">How to buy SuperMiniFloki?</h2>
+<p class="testimonials-subtitle">Get $eFloki in 4 Steps</p>
+<h2 class="testimonials-title">How to buy ElonFloki ?</h2>
 </div>
 <div class="col-md-4" style="display: flex;">
 <div class="testimonials-img" style="display: flex; justify-content: center; align-items:center;">
@@ -1069,7 +1056,7 @@ Investors security and safety is one of our top priorities!</p>
 </div>
 <div class="col-md-7 offset-md-1">
 <div class="testimonials-card">
-<h3>3. Step: Visit $SMF's Exchange Page</h3>
+<h3>3. Step: Visit $eFloki's Exchange Page</h3>
 <p class="testimonials-text">Go to <a href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=#" style="color: #798089; font-family: 'Quicksand';">PancakeSwap</a> and click the "Connect Wallet" button. When Metamask asks for your signature, go ahead and sign it.</p>
 </div>
 </div>
@@ -1084,9 +1071,9 @@ Investors security and safety is one of our top priorities!</p>
 </div>
 <div class="col-md-7 offset-md-1">
 <div class="testimonials-card">
-<h3>4. Step: Swap $BNB for $SMF</h3>
+<h3>4. Step: Swap $BNB for $eFloki</h3>
 <p class="testimonials-text">  Enter the amount of $BNB you would like to swap for
-                      $SMF. Click <strong>Connect Wallet</strong> then
+                      $eFloki. Click <strong>Connect Wallet</strong> then
                       <strong>Swap</strong></p>
 </div>
 </div>
@@ -1119,12 +1106,12 @@ Investors security and safety is one of our top priorities!</p>
 <div class="col-lg-5 footer-logo">
 <img src="assets/images/roundedlogo.png">
 <p class="footer-subsection-text">
-SuperMiniFloki is a BNB Reflection token. Simply Hold SuperMiniFloki and Earn BNB automatically every minute.
+ElonFloki  is a BNB Reflection token. Simply Hold ElonFloki  and Earn BNB automatically every minute.
 </p>
 <div class="footer-social-media-icons-section" style="padding-top: 2rem;">
-<a href="https://twitter.com/SuperMiniFloki" target="_blank" class="footer-social-media-icon"><i class="fab fa-twitter"></i></a>
+<a href="https://t.me/elonflokichat" target="_blank" class="footer-social-media-icon"><i class="fab fa-twitter"></i></a>
 <a href="https://www.instagram.com/#" target="_blank" class="footer-social-media-icon"><i class="fab fa-instagram"></i></a>
-<a href="https://t.me/SuperMiniFloki" class="footer-social-media-icon" target="_blank"><i class="fab fa-telegram"></i></a>
+<a href="https://t.me/elonflokichat" class="footer-social-media-icon" target="_blank"><i class="fab fa-telegram"></i></a>
 <a href="https://github.com/#" class="footer-social-media-icon" target="_blank"><i class="fab fa-github"></i></a>
 <a href="https://www.reddit.com/user/#" class="footer-social-media-icon" target="_blank"><i class="fab fa-reddit"></i></a>
 
